Fixed Jenkinsfile Groovy issue and K8s deployment

--- a/deployment.yml
+++ b/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: bms-container
-        image: kastrov/bms:latest  # Replace with your Docker image
+        image: 653293365854.dkr.ecr.ap-south-1.amazonaws.com/bookmyshow:latest
         ports:
-        - containerPort: 3000  # Replace with the port your app runs on
+        - containerPort: 3000
