Added dynamic image tagging with Jenkins build number

--- a/deployment.yml
+++ b/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: bms-container
-        image: 653293365854.dkr.ecr.ap-south-1.amazonaws.com/bookmyshow:latest
+        image: 653293365854.dkr.ecr.ap-south-1.amazonaws.com/bookmyshow:BUILD_NUMBER
         ports:
         - containerPort: 3000
