--- a/bookmyshow-app/Dockerfile
+++ b/bookmyshow-app/Dockerfile
@@ -1,27 +1,23 @@
-# Use Node.js 18 (or your Jenkins-configured version)
-FROM node:18
-
-# Set working directory
+# ---------- Build Stage ----------
+FROM node:18 AS build
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package.json package-lock.json ./
-
-# Force install a compatible PostCSS version to fix the issue
-RUN npm install postcss@8.4.21 postcss-safe-parser@6.0.0 --legacy-peer-deps
-
-# Install dependencies
-RUN npm install
-
-# Copy the entire project
-COPY . .
-
-# Expose port 3000
-EXPOSE 3000
-
-# Set environment variable to prevent OpenSSL errors
+# 🔑 OpenSSL fix MUST be here (build time)
 ENV NODE_OPTIONS=--openssl-legacy-provider
-ENV PORT=3000
 
-# Start the application
-CMD ["npm", "start"]
+COPY package.json package-lock.json ./
+RUN npm install --legacy-peer-deps
+
+COPY . .
+RUN npm run build
+
+# ---------- Runtime Stage ----------
+FROM node:18-alpine
+WORKDIR /app
+
+RUN npm install -g serve
+
+COPY --from=build /app/build ./build
+
+EXPOSE 3000
+CMD ["serve", "-s", "build", "-l", "3000"]
